<resources>
    <string name="app_name">Test application</string>
    <string name="splash_screen" translatable="false">SPLASH SCREEN</string>
    <string name="button_exit_txt">Exit</string>
    <string name="button_call_txt">Call</string>
    <string name="edit_phone_hint">Insert phone number</string>
    <string name="empty_phone_nb">Phone number is empty!Please fill in.</string>
    <string name="button_contacts">Contacts</string>
    <string name="button_geo">Geolocation</string>
    <string name="startInternet">Start browser</string>
    <string name="hint_contacts">search a contact</string>
    <string name="button_search_contact">Search contact</string>
    <string name="alert_no_contacts">No Contacts found</string>
    <string name="alert_contactsearch_empty">Please insert a search query</string>
    <string name="alert_no_permission">Permission denied</string>
    <string name="button_create_contact">Add contact</string>
    <string name="editTextNome_hint_message">Name</string>
    <string name="editTextPhone_hint_message">Home number</string>
    <string name="editTextSecondPhone_hint_message">Cellphone number</string>
    <string name="editTextEmail_hint_message" translatable="false">Email</string>
    <string name="buttonCreaContactText">Create contact</string>
    <string name="buttonCreaContactOnClick" translatable="false">createContact</string>
    <string name="noName">Insert the name</string>
    <string name="noPhone">Insert the phone</string>
    <string name="textViewRingModeText">Ring mode</string>
    <string name="radioButtonNormalText">Normal</string>
    <string name="radioButtonSilentText">Silent</string>
    <string name="radioButtonVibrateText">Vibrate</string>
    <string name="buttonChooseModeText">Select</string>
    <string name="ringerModeNormalText">Normal</string>
    <string name="ringerModeSilentText">Silent</string>
    <string name="ringerModeVibrateText">Vibrate</string>
    <string name="buttonIncreaseVolumeText">Increase volume</string>
    <string name="buttonDecreaseVolumeText">Decrease volume</string>
    <string name="volumeUpText">Volume up</string>
    <string name="volumeDownText">Volume down</string>
    <string name="buttonApriRecordAudioActivityText">Open audio recorder</string>
    <string name="buttonRecordAudioText">Record audio</string>
    <string name="buttonStopRecordAudioText">Stop recording</string>
    <string name="buttonPlayAudioText">Listen audio</string>
    <string name="recordAudioText">Recording</string>
    <string name="stopRecordAudioText" translatable="false">Stop</string>
    <string name="playAudioText">Listening</string>
    <string name="buttonRecordAudioOnClick" translatable="false">registraAudio</string>
    <string name="buttonStopRecordAudioOnClick" translatable="false">stopRecordAudio</string>
    <string name="buttonPlayAudioOnClick" translatable="false">playAudio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="buttonPhotoText">Photo</string>
    <string name="buttonVideoText">Video</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="buttonOpenUrlText">Open URL</string>
    <string name="noNetwork">No network available</string>

</resources>
