<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/RecordAudioLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".RecordAudioActivity"
              android:orientation="vertical">

    <Button
            android:id="@+id/buttonRecordAudioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/buttonRecordAudioText"
            android:onClick="@string/buttonRecordAudioOnClick" />

    <Button
            android:id="@+id/buttonStopRecordAudioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonStopRecordAudioText"
            android:onClick="@string/buttonStopRecordAudioOnClick" />
    <Button
            android:id="@+id/buttonPlayAudioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPlayAudioText"
            android:onClick="@string/buttonPlayAudioOnClick" />

</LinearLayout>