<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateContactActivity" android:orientation="vertical">

    <EditText
            android:id="@+id/editTextNome_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editTextNome_hint_message"/>

    <EditText
            android:id="@+id/editTextPhone_id"
            android:inputType="phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editTextPhone_hint_message"/>
    <EditText
            android:id="@+id/editTextSecondPhone_id"
            android:inputType="phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editTextSecondPhone_hint_message"/>

    <EditText
            android:id="@+id/editTextEmail_id"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editTextEmail_hint_message"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCreaContactText"
            android:onClick="@string/buttonCreaContactOnClick" />

</LinearLayout>