<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/MultimediaLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MultimediaFragment"
              android:orientation="vertical">

    <TextView
            android:id="@+id/textViewRingModeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewRingModeText"/>

    <RadioGroup
            android:id="@+id/radioGroupId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <RadioButton
                    android:id="@+id/radioButtonNormalId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:text="@string/radioButtonNormalText" />
            <RadioButton
                    android:id="@+id/radioButtonSilentId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/radioButtonSilentText" />

            <RadioButton
                    android:id="@+id/radioButtonVibrateId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/radioButtonVibrateText" />

    </RadioGroup>
    <Button
            android:id="@+id/buttonChooseModeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/buttonChooseModeText" />
    <Button
            android:id="@+id/buttonIncreaseVolumeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonIncreaseVolumeText"/>
    <Button
            android:id="@+id/buttonDecreaseVolumeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDecreaseVolumeText" />
    <Button
            android:id="@+id/buttonApriRecordAudioActivityId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonApriRecordAudioActivityText" />

</LinearLayout>