<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallActivity">

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edit_phone_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/button_MakeCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_call_txt"
            android:onClick="onCallClick"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editPhoneNumber"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/button_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonContacts"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_MakeCall" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:onClick="onContactClick"/>
</android.support.constraint.ConstraintLayout>